--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      html {
+        height: 100%;
+        width: 100%;
+      }
+    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>replit</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<head>
-  <style>
-    html {
-      height: 100%;
-      width: 100%;
-    }
-    
-  </style>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  Hello world
-  <script src="script.js"></script>
-</body>
-
+  <body>
+    <h1>Hellow Work Is Hell To Pay</h1>
+    <script src="script.js"></script>
+  </body>
 </html>
