--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <body>
     <h1>Hellow Work Is Hell To Pay</h1>
+    <p>I'm just adding a paragraph</p>
     <script src="script.js"></script>
   </body>
 </html>
